--- a/myserver/pom.xml
+++ b/myserver/pom.xml
@@ -14,7 +14,7 @@
 		<org.springframework-version>5.3.2</org.springframework-version>
 		<org.aspectj-version>1.9.0</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
-		<org.springframework.security-version>5.2.5.RELEASE</org.springframework.security-version>
+		<org.springframework.security-version>5.2.5.RELEASE</org.springframework.security-version> <!-- 시큐리티 버전 -->
 	</properties>
 	<dependencies>
 		<!-- Spring -->
